--- a/src/main/resources/templates/cadastro-usuario.html
+++ b/src/main/resources/templates/cadastro-usuario.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineList - Cadastro de Usuário</title>
+	<link rel="icon" type="image/png" href="/images/icone.png">
     <link rel="stylesheet" href="/css/style.css"> 
 </head>
 <body>
@@ -21,27 +22,35 @@
     <div class="container">
         <div class="card">
             <h1>Cadastro de Usuário</h1>
+			
+			<div th:if="${sucesso}" style="color: #155724; background-color: #d4edda; border-color: #c3e6cb; padding: 10px; border-radius: 4px; margin-bottom: 15px;">
+			    <p th:text="${sucesso}"></p>
+			</div>
+			
+			<div th:if="${erro}" style="color: #721c24; background-color: #f8d7da; border-color: #f5c6cb; padding: 10px; border-radius: 4px; margin-bottom: 15px;">
+			    <p th:text="${erro}"></p>
+			</div>
             
-            <form action="#" method="post" class="form-cadastro">
+            <form action="/cadastro" method="post" class="form-cadastro" th:object="${usuario}">
                 
                 <div class="form-group">
                     <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="nome" required>
+                    <input type="text" id="nome" name="nome" th:field="*{nome}" required>
                 </div>
                 
                 <div class="form-group">
                     <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" th:field="*{email}" required>
                 </div>
                 
                 <div class="form-group">
                     <label for="senha">Senha:</label>
-                    <input type="password" id="senha" name="senha" required>
+                    <input type="password" id="senha" name="senha" th:field="*{senha}" maxlength="8" minlength="5" required>
                 </div>
                 
                 <div class="form-group">
                     <label for="confirmarSenha">Confirmar Senha:</label>
-                    <input type="password" id="confirmarSenha" name="confirmarSenha" required>
+                    <input type="password" id="confirmarSenha" name="confirmarSenha" maxlength="8" minlength="5" required>
                 </div>
                 
                 <button type="submit" class="btn-cadastrar">Cadatrar</button>
